SYNTAX-CHECK-REFactor.txt
api/access-accounts/index.js: ERROR
/mnt/data/drtarek_real_cleanup/api/access-accounts/index.js:104
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/homework/index.js: ERROR
/mnt/data/drtarek_real_cleanup/api/homework/index.js:113
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/analytics.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/analytics.js:56
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/detail.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/detail.js:41
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/list.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/list.js:45
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/play.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/play.js:105
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/save-note.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/save-note.js:40
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/save-progress.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/save-progress.js:31
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/start.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/start.js:31
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

api/student/submit.js: ERROR
/mnt/data/drtarek_real_cleanup/api/student/submit.js:31
};
^

SyntaxError: missing ) after argument list
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

backend-access.js: OK
custom-classes.js: OK
grades-extension.js: OK
homework-admin.js: OK
homework.js: OK
js/admin-extra.js: OK
js/app-core.js: ERROR
/mnt/data/drtarek_real_cleanup/js/app-core.js:3773
)();
^

SyntaxError: Unexpected token ')'
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0

js/play-main.js: OK
lib/access-accounts-backend.js: OK
lib/api-security.js: OK
lib/homework-backend.js: OK
lib/kv-store.js: OK
lib/student-cloud-backend.js: OK
parent.js: OK
play-question-bank.js: OK
play-test.js: OK
quiz-bulk-package.js: OK
remove-snapshot.js: OK
service-worker.js: OK
student-cloud-admin.js: OK
student-cloud-client.js: OK
ui-language-patch.js: OK